// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel Vue should group props right 1`] = `
"import _mergeJSXProps from \\"@vue/babel-helper-vue-jsx-merge-props\\";
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/vue\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`Button {color: var(--1p43z7j_0)}\`
/*__inner_css_end__*/
, \\"1akfzaw\\")
/*__reshadow_css_end__*/
]);
new Vue({
  el: \\"#app\\",
  render: h => styled((set([styled_c8], {
    \\"--1p43z7j_0\\": color
  }), h(\\"Button\\", map(\\"Button\\", _mergeJSXProps([{
    \\"class\\": \\"test\\",
    \\"attrs\\": {
      \\"size\\": \\"s\\",
      \\"bgcolor\\": \\"red\\",
      \\"$$style\\": styled.$$style
    }
  }, use({
    mod: \\"value\\"
  })])), [\\"Red\\"])))
});"
`;

exports[`babel Vue should pass classes 1`] = `
"import styled, { set, create, css, map, __css__ } from \\"@reshadow/vue\\";
import styles from './styles';
const styled_c8 = create([
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`Button + Button {
    margin-left: 10px;
}\`
/*__inner_css_end__*/
, \\"spxqko\\")
/*__reshadow_css_end__*/
]);
new Vue({
  el: \\"#app\\",
  render: h => styled((set([styled_c8]), h(\\"div\\", map(\\"div\\", {
    \\"attrs\\": {
      \\"className\\": styled.styles[\\"__div\\"]
    }
  }), [h(\\"Button\\", map(\\"Button\\", {
    \\"attrs\\": {
      \\"size\\": \\"s\\",
      \\"bgcolor\\": \\"red\\"
    }
  }), [\\"Red\\"]), h(\\"Button\\", map(\\"Button\\", {
    \\"attrs\\": {
      \\"size\\": \\"m\\",
      \\"bgcolor\\": \\"rebeccapurple\\"
    }
  }), [\\"Rebeccapurple\\"])])))
});"
`;

exports[`babel macro should NOT process a variable inside a comment 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`/* extremely insightful comment w/ \${type} */
.___button_9qhfo_1 {
    color: red;
    height: var(--1p43z7j_1);
}\`
/*__inner_css_end__*/
, \\"9qhfo\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_9qhfo_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles], {
  \\"--1p43z7j_1\\": disabled
}), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel macro should NOT process a variable inside a comment, multiple comments 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import getHeight from './utils';
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`/* extremely insightful comment w/ \${type} */
.___button_1rd3t_1 {
    /* yet another comment */
    color: red;
    height: var(--1p43z7j_1);
    /* height: \${someVar}; */
    background: var(--1p43z7j_3);
}\`
/*__inner_css_end__*/
, \\"1rd3th1\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_1rd3t_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles], {
  \\"--1p43z7j_1\\": disabled,
  \\"--1p43z7j_3\\": color
}), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel macro should NOT process a variable inside a comment, multiple comments in a single quasi 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import getHeight from './utils';
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`/* extremely insightful comment w/ \${type} */
.___button_t2hvu_1 {
    /* yet another comment */
    color: red;
    height: var(--1p43z7j_1);
    /* height: \${someVar}; */
    /* more comments */
    background: var(--1p43z7j_3);
}\`
/*__inner_css_end__*/
, \\"t2hvu2\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_t2hvu_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles], {
  \\"--1p43z7j_1\\": disabled,
  \\"--1p43z7j_3\\": color
}), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel macro should keep named imports 1`] = `
"import React from 'react';
import styled, { use, set, create, css, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_d2nb2_1 {
    color: red;
}\`
/*__inner_css_end__*/
, \\"d2nb2y\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_d2nb2_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: 'normal'
})), \\"content\\")));

export default App;"
`;

exports[`babel macro should merge use 1`] = `
"import React from 'react';
import styled, { use, set, create, css, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_d2nb2_1 {
    color: red;
}\`
/*__inner_css_end__*/
, \\"d2nb2y\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_d2nb2_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles]), React.createElement(\\"button\\", map(\\"button\\", use({
  theme: 'normal',
  size: \\"s\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel macro should process module with macro 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_d2nb2_1 {
    color: red;
}\`
/*__inner_css_end__*/
, \\"d2nb2y\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_d2nb2_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel macro should process styles with comments 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`/* extremely insightful comment */
.___button_xwari_1 {
    color: red;
}\`
/*__inner_css_end__*/
, \\"xwari1\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_xwari_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8, styles]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel postcss should inline styles from file but ignore them 1`] = `
"import React from 'react';
import styled, { css, __css__, set, create, use, map } from \\"@reshadow/core\\";

/*__reshadow-styles__:\\"./styles.css\\"*/
const { ...styles
} = (
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button {
    color: red;
}
\`
/*__inner_css_end__*/
, \\"fo1gj4\\")
/*__reshadow_css_end__*/
, {});
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel postcss should process styles and add them runtime 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_d2nb2_1 {
    color: red;
}\`
/*__inner_css_end__*/
, \\"d2nb2y\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_d2nb2_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel postcss should process styles from file 1`] = `
"import React from 'react';
import styled, { css, __css__, set, create, use, map } from \\"@reshadow/core\\";

/*__reshadow-styles__:\\"./styles.css\\"*/
const { ...styles
} = (
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_fo1gj_1 {
    color: red;
}
\`
/*__inner_css_end__*/
, \\"fo1gj4\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_fo1gj_1\`
});
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel postcss should process styles with css 1`] = `
"import React from 'react';
import styled, { css, __css__, set, create, use, map } from \\"@reshadow/core\\";
const styles = (
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`
    .___button_1cx4s_1 {
        color: red;
    }
\`
/*__inner_css_end__*/
, \\"1cx4s1m\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_1cx4s_1\`
});
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel postcss should process styles with css local name 1`] = `
"import React from 'react';
import styled, { css as localCss, __css__, set, create, use, map } from \\"@reshadow/core\\";
const styles = (
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`
    .___button_1cx4s_1 {
        color: red;
    }
\`
/*__inner_css_end__*/
, \\"1cx4s1m\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_1cx4s_1\`
});
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel postcss should use cssnano 1`] = `
"import React from 'react';
import styled, { set, create, css, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_1n8fw_1{display:grid}\`
/*__inner_css_end__*/
, \\"1n8fwd2\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_1n8fw_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}), \\"content\\")));

export default App;"
`;

exports[`babel postcss should use postcss-env 1`] = `
"import React from 'react';
import styled, { set, create, css, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_ltzzv_1 {
    -webkit-transition: 1s;
    transition: 1s;
}\`
/*__inner_css_end__*/
, \\"ltzzvd\\")
/*__reshadow_css_end__*/
, {
  \\"__button\\": \`___button_ltzzv_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}), \\"content\\")));

export default App;"
`;

exports[`babel postcss should work with css-modules imports 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([(
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`.___button_1vljt_1 {

    color: red;
}\`
/*__inner_css_end__*/
, \\"1vljt5e\\")
/*__reshadow_css_end__*/
, {
  \\"title\\": \`_title_2ms0f_1\`,
  \\"__button\\": \`___button_1vljt_1 _title_2ms0f_1\`
})]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should keep the links to styles if they cant hoist 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import baseStyles from './styles';
const styled_c8 = create([baseStyles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button {
    color: red;
}\`
/*__inner_css_end__*/
, \\"d2nb2y\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  styles,
  type,
  color,
  bgcolor
}) => styled((set([styled_c8, styles]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should merge attributes well 1`] = `
"import React from 'react';
import styled, { use, set, create, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type,
  ...props
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  disabled: true,
  name: \\"button\\"
}, props, {
  type: \\"submit\\",
  autofocus: true,
  \\"aria-hidden\\": true
}, use({
  size: 's',
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should not transform tag with dot element that is not under \`use\` namespace 1`] = `
"import React from 'react';
import styled, { set, create, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(components.button, map(\\"components.button\\", {
  type: type,
  disabled: disabled
}), React.createElement(\\"span\\", {
  className: styled.styles[\\"__content\\"]
}, \\"content\\"))));

export default App;"
`;

exports[`babel should transform tag with dot element 1`] = `
"import React from 'react';
import styled, { use, set, create, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"div\\", map(\\"use--button\\", {
  type: type,
  disabled: disabled
}), React.createElement(\\"span\\", {
  className: styled.styles[\\"__use--content\\"]
}, \\"content\\"))));

export default App;"
`;

exports[`babel should transform tag with just "as" attribute 1`] = `
"import React from 'react';
import styled, { use, set, create, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}), React.createElement(\\"span\\", {
  className: styled.styles[\\"__content\\"]
}, \\"content\\"))));

export default App;"
`;

exports[`babel should transform tag with namespace 1`] = `
"import React from 'react';
import styled, { use, set, create, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"div\\", map(\\"use--button\\", {
  type: type,
  disabled: disabled
}), React.createElement(\\"span\\", {
  className: styled.styles[\\"__use--content\\"]
}, \\"content\\"))));

export default App;"
`;

exports[`babel should transform the code 1`] = `
"import React from 'react';
import styled, { set, create, use, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should transform the nested code 1`] = `
"import React from 'react';
import styled, { set, create, use, map } from \\"@reshadow/core\\";
import styles from './styles';
import styles2 from './styles2';
const styled_c8 = create([styles]);
const styled_12c = create([styles2]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), styled((set([styled_12c]), React.createElement(\\"div\\", {
  className: styled.styles[\\"__content\\"]
}, \\"content\\"))), React.createElement(\\"button\\", {
  className: styled.styles[\\"__button\\"]
}, \\"click\\"))));

export default App;"
`;

exports[`babel should transform with css-in-js code 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: red;
}\`
/*__inner_css_end__*/
, \\"r6bn3g\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should transform with css-in-js code with styles 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: red;
}\`
/*__inner_css_end__*/
, \\"r6bn3g\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_1);
}\`
/*__inner_css_end__*/
, \\"17veqsr\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type,
  color,
  bgcolor
}) => styled((set([styled_c8], {
  \\"--1p43z7j_0\\": color,
  \\"--1p43z7j_1\\": bgcolor
}), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables and avoid duplication 1`] = `
"import React from 'react';
import styled, { set, create, css, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_0);
}\`
/*__inner_css_end__*/
, \\"8u2ows\\")
/*__reshadow_css_end__*/
]);

const App = ({
  color
}) => styled((set([styled_c8], {
  \\"--1p43z7j_0\\": color
}), React.createElement(\\"button\\", {
  className: styled.styles[\\"__button\\"],
  style: styled.$$style
}, \\"content\\")));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables in nested elemnts 1`] = `
"import React from 'react';
import styled, { set, create, css, map, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`div {
    padding: 10px;
}\`
/*__inner_css_end__*/
, \\"54eajl\\")
/*__reshadow_css_end__*/
]);
const styled_12c = create([
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_1);
}\`
/*__inner_css_end__*/
, \\"17veqsr\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type,
  color,
  bgcolor
}) => styled((set([styled_c8]), React.createElement(\\"div\\", {
  className: styled.styles[\\"__div\\"]
}, styled((set([styled_12c], {
  \\"--1p43z7j_0\\": color,
  \\"--1p43z7j_1\\": bgcolor
}), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}), \\"content\\"))))));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables in sibling nodes 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_1);
}\`
/*__inner_css_end__*/
, \\"17veqsr\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type,
  color,
  bgcolor
}) => styled((set([styled_c8], {
  \\"--1p43z7j_0\\": color,
  \\"--1p43z7j_1\\": bgcolor
}), React.createElement(React.Fragment, null, React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\"), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"action\\"
})), \\"content 2\\"))));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables with string inline style 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_1);
}\`
/*__inner_css_end__*/
, \\"17veqsr\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type,
  color,
  bgcolor
}) => styled((set([styled_c8], \`--1p43z7j_0:\${color};--1p43z7j_1:\${bgcolor};\`), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables with string inline style and avoid duplication 1`] = `
"import React from 'react';
import styled, { set, create, css, use, map, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button[disabled] {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_0);
}\`
/*__inner_css_end__*/
, \\"1aon2i2\\")
/*__reshadow_css_end__*/
]);

const App = ({
  disabled,
  type,
  color
}) => styled((set([styled_c8], \`--1p43z7j_0:\${color};\`), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled,
  $$style: styled.$$style
}, use({
  theme: \\"normal\\"
})), \\"content\\")));

export default App;"
`;

exports[`babel should transform with css-in-js code with variables without overhead 1`] = `
"import React from 'react';
import styled, { set, create, css, __css__ } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles,
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button {
    color: var(--1p43z7j_0);
    background-color: var(--1p43z7j_1);
}\`
/*__inner_css_end__*/
, \\"1lichul\\")
/*__reshadow_css_end__*/
]);

const App = ({
  color,
  bgcolor
}) => styled((set([styled_c8], {
  \\"--1p43z7j_0\\": color,
  \\"--1p43z7j_1\\": bgcolor
}), React.createElement(\\"button\\", {
  className: styled.styles[\\"__button\\"],
  style: styled.$$style
}, \\"content\\")));

export default App;"
`;

exports[`babel should use custom elementFallback 1`] = `
"import React from 'react';
import styled, { use, set, create, map } from \\"@reshadow/core\\";
import styles from './styles';
const styled_c8 = create([styles]);

const App = ({
  disabled,
  type
}) => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", {
  type: type,
  disabled: disabled
}), React.createElement(\\"span\\", {
  className: styled.styles[\\"__content\\"]
}, \\"content\\"))));

export default App;"
`;

exports[`babel should work with just spread 1`] = `
"import React from 'react';
import styled, { set, create, css, map, __css__ } from \\"@reshadow/core\\";
const styled_c8 = create([
/*__reshadow_css_start__*/
__css__(
/*__inner_css_start__*/
\`button {
    padding: 5px 10px;
}\`
/*__inner_css_end__*/
, \\"hfcxht\\")
/*__reshadow_css_end__*/
]);

const Button = props => styled((set([styled_c8]), React.createElement(\\"button\\", map(\\"button\\", props))));

export default Button;"
`;
